--- a/index.html
+++ b/index.html
@@ -1,11 +1,109 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="style.css">
-    <title>Mock-Up</title>
-  </head>
-  <body>
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
+  <title>Mock-Up</title>
+</head>
+<body>
+  <header>
+    <button class="free-shipping" type="button" name="button">FREE SHIPPING!</button>
+    <ul >
+      <li class="top-of-page">Plus Spring Savings</li>
+      <li class="top-of-page">$10 off $50 order!</li>
+      <li class="top-of-page">$20 off $100 order!</li>
+      <li class="top-of-page">$30 off $150 order!</li>
+    </ul>
+    </header>
+    <nav class="top">
+      <img src="" alt="" />
+        <ul>
+          <li class="nav-bar">Collection</li>
+          <li class="nav-bar">Color</li>
+          <li class="nav-bar">Width</li>
+          <li class="nav-bar">Fabric</li>
+          <li class="nav-bar">Pattern</li>
+        </ul>
+    </nav>
+        <button class="cart">Cart</button>
+        <input class="search-bar" name="Search" value="Search">
+        <i class="fa fa-search" aria-hidden="true"></i>
 
-  </body>
+
+  <div class="tie-pics">
+
+  </div>
+<div class="tiles">
+  <div class="bow-ties">
+    <p>what?</p>
+  </div>
+  <div class="pocket-squares">
+    <p>what?</p>
+  </div>
+  <div class="tie-bars">
+    <p>what?</p>
+  </div>
+</div>
+
+<div class="story">
+  <h2><em>We started designing andselling neckties in 1971. <br/>After 44 years, we're still family-owned and operated.</em></h2>
+  <a class="story--link"href="https://i.imgflip.com/hqdk9.jpg">VIEW OUR STORY</a>
+</div>
+
+  <footer>
+    <div class="wkpick">
+      <p>Weekly Pick</p>
+    </div>
+    <div class="loop">
+      <p>Loop Us In</p>
+    </div>
+    <div class="quarter">
+      <p>The Quarterly</p>
+    </div>
+
+    <div class="guide">
+      <p>Style Guide</p>
+    </div>
+  </footer>
+
+  <div class="bottom--nav">
+    <div class="shop">
+      <p><strong>Shop By</strong></p>
+        <ul class="shop--li">
+          <li>Collection</li>
+          <li>Color</li>
+          <li>Width</li>
+          <li>Fabric</li>
+          <li>Pattern</li>
+        </ul>
+    </div>
+
+    <div class="about">
+      <p><strong>About Us</strong></p>
+        <ul class="about--us">
+          <li>Our Story</li>
+          <li>Where to Buy</li>
+          <li>Wholesale</li>
+          <li>Offers</li>
+        </ul>
+    </div>
+
+    <div class="style">
+      <p><strong>Style Guide</strong></p>
+        <ul class="style--guide">
+          <li>How To Wear</li>
+          <li>How To Tie</li>
+          <li>Blog</li>
+        </ul>
+    </div>
+    <div class="help">
+      <p><strong>Help</strong></p>
+        <ul class="help--li">
+          <li>Contact Us</li>
+          <li>Shipping Info</li>
+          <li>Returns</li>
+        </ul>
+    </div>
+  </div>
+</body>
 </html>
