--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           <li>Blog</li>
         </ul>
     </div>
-    <div class="help">
+    <div class="help!">
       <p><strong>Help</strong></p>
         <ul class="help--li">
           <li>Contact Us</li>
