--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <header>
     <button class="free-shipping" type="button" name="button">FREE SHIPPING!</button>
-    <ul >
+    <ul class="page-top">
       <li class="top-of-page">Plus Spring Savings</li>
       <li class="top-of-page">$10 off $50 order!</li>
       <li class="top-of-page">$20 off $100 order!</li>
@@ -16,23 +16,51 @@
     </ul>
     </header>
     <nav class="top">
-      <img src="" alt="" />
-        <ul>
+      <img class="logo"src="assets/logo-stack@2x.png" alt="" height="150rem"/>
+        <ul class="tie-select">
           <li class="nav-bar">Collection</li>
           <li class="nav-bar">Color</li>
           <li class="nav-bar">Width</li>
           <li class="nav-bar">Fabric</li>
           <li class="nav-bar">Pattern</li>
         </ul>
-    </nav>
-        <button class="cart">Cart</button>
-        <input class="search-bar" name="Search" value="Search">
-        <i class="fa fa-search" aria-hidden="true"></i>
 
+      <div class="top-right">
+        <a class="login" href="">SIGN IN</a>
+        <a class="login" href="">REGISTER</a>
+      </div>
+          <button class="cart">Cart</button>
+          <input class="search-bar" name="Search" value="Search">
+          <i class="fa fa-search" aria-hidden="true"></i>
 
+      </nav>
+
+<div class="ties">
   <div class="tie-pics">
-
+    <img src="assets/black@1.5x.jpg" alt="" >
+    <img src="assets/blue@1.5x.jpg" alt="">
+    <img src="assets/collegiate@1.5x.jpg" alt="">
+    <img src="assets/cotton@1.5x.jpg" alt="">
+    <img src="assets/favorites@1.5x.jpg" alt="">
+    <img src="assets/graphic@1.5x.jpg" alt="">
+    <img src="assets/plaid@1.5x.jpg" alt="">
+    <img src="assets/silk@1.5x.jpg" alt="">
+    <img src="assets/striped@1.5x.jpg" alt="">
   </div>
+  <div class="tie-types">
+    <p>Black</p>
+    <p>Blue</p>
+    <p>Collegiate</p>
+    <p>Cotton</p>
+    <p>Favorites</p>
+    <p>Graphic</p>
+    <p>Plaid</p>
+    <p>Silk</p>
+    <p>Striped</p>
+  </div>
+
+</div>
+
 <div class="tiles">
   <div class="bow-ties">
     <p>what?</p>
@@ -96,7 +124,8 @@
           <li>Blog</li>
         </ul>
     </div>
-    <div class="help!">
+
+    <div class="help">
       <p><strong>Help</strong></p>
         <ul class="help--li">
           <li>Contact Us</li>
