--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
   <title>Mock-Up</title>
 </head>
+
 <body>
   <header>
     <button class="free-shipping" type="button" name="button">FREE SHIPPING!</button>
@@ -14,69 +16,97 @@
       <li class="top-of-page">$20 off $100 order!</li>
       <li class="top-of-page">$30 off $150 order!</li>
     </ul>
-    </header>
-    <nav class="top">
-      <img class="logo"src="assets/logo-stack@2x.png" alt="" height="150rem"/>
-        <ul class="tie-select">
-          <li class="nav-bar">Collection</li>
-          <li class="nav-bar">Color</li>
-          <li class="nav-bar">Width</li>
-          <li class="nav-bar">Fabric</li>
-          <li class="nav-bar">Pattern</li>
-        </ul>
+  </header>
+  <nav class="top">
+    <img class="logo" src="assets/logo-stack@2x.png" alt="" height="150rem" />
+    <ul class="tie-select">
+      <li class="nav-bar">Collection</li>
+      <li class="nav-bar">Color</li>
+      <li class="nav-bar">Width</li>
+      <li class="nav-bar">Fabric</li>
+      <li class="nav-bar">Pattern</li>
+    </ul>
 
+    <div class="nav-right">
       <div class="top-right">
         <a class="login" href="">SIGN IN</a>
         <a class="login" href="">REGISTER</a>
       </div>
-          <button class="cart">Cart</button>
-          <input class="search-bar" name="Search" value="Search">
-          <i class="fa fa-search" aria-hidden="true"></i>
+      <div class="bottom-right">
+        <button class="cart">Cart</button>
+        <input class="search-bar" name="Search" value="Search">
+        <i class="fa fa-search" aria-hidden="true"></i>
+      </div>
+    </div>
 
-      </nav>
+  </nav>
 
-<div class="ties">
-  <div class="tie-pics">
-    <img src="assets/black@1.5x.jpg" alt="" >
-    <img src="assets/blue@1.5x.jpg" alt="">
-    <img src="assets/collegiate@1.5x.jpg" alt="">
-    <img src="assets/cotton@1.5x.jpg" alt="">
-    <img src="assets/favorites@1.5x.jpg" alt="">
-    <img src="assets/graphic@1.5x.jpg" alt="">
-    <img src="assets/plaid@1.5x.jpg" alt="">
-    <img src="assets/silk@1.5x.jpg" alt="">
-    <img src="assets/striped@1.5x.jpg" alt="">
+  <div class="ties">
+    <div class="container">
+      <div class="tie-pics">
+        <div class="tie">
+          <img src="assets/black@1.5x.jpg" alt="">
+          <p>Black</p>
+        </div>
+        <div class="tie">
+          <img src="assets/blue@1.5x.jpg" alt="">
+          <p>Blue</p>
+        </div>
+        <div class="tie">
+          <img src="assets/collegiate@1.5x.jpg" alt="">
+          <p>Collegiate</p>
+        </div>
+        <div class="tie">
+          <img src="assets/cotton@1.5x.jpg" alt="">
+          <p>Cotton</p>
+        </div>
+        <div class="tie">
+          <img src="assets/favorites@1.5x.jpg" alt="">
+          <p>Favorites</p>
+        </div>
+        <div class="tie">
+          <img src="assets/graphic@1.5x.jpg" alt="">
+          <p>Graphic</p>
+        </div>
+        <div class="tie">
+          <img src="assets/plaid@1.5x.jpg" alt="">
+          <p>Plaid</p>
+        </div>
+        <div class="tie">
+          <img src="assets/silk@1.5x.jpg" alt="">
+          <p>Silk</p>
+        </div>
+        <div class="tie">
+          <img src="assets/striped@1.5x.jpg" alt="">
+          <p>Striped</p>
+        </div>
+      </div>
+
+      <p class="slogan">Start dressing better.</p>
+    </div>
   </div>
-  <div class="tie-types">
-    <p>Black</p>
-    <p>Blue</p>
-    <p>Collegiate</p>
-    <p>Cotton</p>
-    <p>Favorites</p>
-    <p>Graphic</p>
-    <p>Plaid</p>
-    <p>Silk</p>
-    <p>Striped</p>
-  </div>
 
+  <div class="tiles">
+    <div class="container">
+    <div class="bow-ties">
+      <p>Bow Ties</p>
+      <img src="assets/bow-ties@1.5x.jpg" alt="">
+    </div>
+    <div class="pocket-squares">
+      <p>Pocket Squares</p>
+      <img src="assets/pocket-squares@1.5x.jpg" alt="">
+    </div>
+    <div class="tie-bars">
+      <p>Tie Bars</p>
+      <img src="assets/tie-bars@1.5x.jpg" alt="">
+    </div>
+  </div>
 </div>
 
-<div class="tiles">
-  <div class="bow-ties">
-    <p>what?</p>
+  <div class="story">
+    <h2><em>We started designing andselling neckties in 1971. <br/>After 44 years, we're still family-owned and operated.</em></h2>
+    <a class="story--link" href="https://i.imgflip.com/hqdk9.jpg">VIEW OUR STORY</a>
   </div>
-  <div class="pocket-squares">
-    <p>what?</p>
-  </div>
-  <div class="tie-bars">
-    <p>what?</p>
-  </div>
-</div>
-
-<div class="story">
-  <h2><em>We started designing andselling neckties in 1971. <br/>After 44 years, we're still family-owned and operated.</em></h2>
-  <a class="story--link"href="https://i.imgflip.com/hqdk9.jpg">VIEW OUR STORY</a>
-</div>
 
   <footer>
     <div class="wkpick">
@@ -97,42 +127,43 @@
   <div class="bottom--nav">
     <div class="shop">
       <p><strong>Shop By</strong></p>
-        <ul class="shop--li">
-          <li>Collection</li>
-          <li>Color</li>
-          <li>Width</li>
-          <li>Fabric</li>
-          <li>Pattern</li>
-        </ul>
+      <ul class="shop--li">
+        <li>Collection</li>
+        <li>Color</li>
+        <li>Width</li>
+        <li>Fabric</li>
+        <li>Pattern</li>
+      </ul>
     </div>
 
     <div class="about">
       <p><strong>About Us</strong></p>
-        <ul class="about--us">
-          <li>Our Story</li>
-          <li>Where to Buy</li>
-          <li>Wholesale</li>
-          <li>Offers</li>
-        </ul>
+      <ul class="about--us">
+        <li>Our Story</li>
+        <li>Where to Buy</li>
+        <li>Wholesale</li>
+        <li>Offers</li>
+      </ul>
     </div>
 
     <div class="style">
       <p><strong>Style Guide</strong></p>
-        <ul class="style--guide">
-          <li>How To Wear</li>
-          <li>How To Tie</li>
-          <li>Blog</li>
-        </ul>
+      <ul class="style--guide">
+        <li>How To Wear</li>
+        <li>How To Tie</li>
+        <li>Blog</li>
+      </ul>
     </div>
 
     <div class="help">
       <p><strong>Help</strong></p>
-        <ul class="help--li">
-          <li>Contact Us</li>
-          <li>Shipping Info</li>
-          <li>Returns</li>
-        </ul>
+      <ul class="help--li">
+        <li>Contact Us</li>
+        <li>Shipping Info</li>
+        <li>Returns</li>
+      </ul>
     </div>
   </div>
 </body>
+
 </html>
