--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css">
   <title>Mock-Up</title>
 </head>
 
@@ -110,17 +111,36 @@
 
   <footer>
     <div class="wkpick">
-      <p>Weekly Pick</p>
+      <h3>Weekly Pick</h3>
+        <img src="assets/striped.jpg" alt="">
+          <p class="footer-p"><a class="knot" href="#">2"Blue, Black, Gray, Yellow and White Cotton Madras Skinny Tie</a></p>
     </div>
     <div class="loop">
-      <p>Loop Us In</p>
+      <h3>Loop Us In</h3>
+        <p class="footer-p">Tightly knotted or hanging loose? Fitted suit or selvedge denim? Share your style with us.</p>
+  <div class="icons">
+    <img src="https://cdn0.iconfinder.com/data/icons/Pinterest/128/Pinterest_Favicon.png" alt="">
+    <img src="https://cdn4.iconfinder.com/data/icons/social-messaging-ui-color-shapes-2-free/128/social-facebook-circle-128.png" alt="">
+    <img src="http://www.pcf.org/atf/cf/%7B7C77D6A2-5859-4D60-AF47-132FD0F85892%7D/twitter-round.png" alt="">
+  </div>
+
+        <!-- <i class="fa fa-facebook-official fa-2x" aria-hidden="true"></i>
+        <i class="fa fa-pinterest-p fa-2x" aria-hidden="true"></i>
+        <i class="fa fa-twitter fa-2x" aria-hidden="true"></i> -->
+
+
     </div>
     <div class="quarter">
-      <p>The Quarterly</p>
+      <h3>The Quarterly</h3>
+      <p class="footer-p">Our newletter is simple and brief for the hard-pressed gentleman.</p>
+        <input class="quarter-search" type="search-bar" name="name" value="name@example.com">
+          <button class="sub" type="button" name="button">SUBSCRIBE ME</button>
     </div>
 
     <div class="guide">
-      <p>Style Guide</p>
+      <h3>Style Guide</h3>
+        <img src="assets/style-guide@1.5x.jpg" alt="" >
+          <p class="footer-p">There are eight-five ways to <a class="knot" href="#">knot a tie</a>. We'll show you <a class="knot" href="#">the essentials</a>.</p>
     </div>
   </footer>
 
