--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div class="bottom-right">
         <button class="cart">Cart</button>
         <input class="search-bar" name="Search" value="Search">
-        <i class="fa fa-search" aria-hidden="true"></i>
+        <span><i class="fa fa-search" aria-hidden="true"></i><span>
       </div>
     </div>
 
@@ -88,39 +88,38 @@
   </div>
 
   <div class="tiles">
-    <div class="container">
     <div class="bow-ties">
-      <p>Bow Ties</p>
       <img src="assets/bow-ties@1.5x.jpg" alt="">
+      <p class="tiles-p1">Bow Ties</p>
     </div>
     <div class="pocket-squares">
-      <p>Pocket Squares</p>
       <img src="assets/pocket-squares@1.5x.jpg" alt="">
+      <p class="tiles-p2">Pocket<br/>Squares</p>
     </div>
     <div class="tie-bars">
-      <p>Tie Bars</p>
-      <img src="assets/tie-bars@1.5x.jpg" alt="">
+      <img src="assets/tie-bars@1.5x.jpg" alt="" >
+      <p class="tiles-p3">Tie Bars</p>
     </div>
   </div>
-</div>
 
   <div class="story">
-    <h2><em>We started designing andselling neckties in 1971. <br/>After 44 years, we're still family-owned and operated.</em></h2>
+    <h1><em>We started designing andselling neckties in 1971. <br/>After 44 years, we're still family-owned and operated.</em></h1>
     <a class="story--link" href="https://i.imgflip.com/hqdk9.jpg">VIEW OUR STORY</a>
   </div>
 
   <footer>
+    <div class="footer-inner">
     <div class="wkpick">
       <h3>Weekly Pick</h3>
-        <img src="assets/striped.jpg" alt="">
+        <img src="assets/new.jpg" alt="">
           <p class="footer-p"><a class="knot" href="#">2"Blue, Black, Gray, Yellow and White Cotton Madras Skinny Tie</a></p>
     </div>
     <div class="loop">
       <h3>Loop Us In</h3>
         <p class="footer-p">Tightly knotted or hanging loose? Fitted suit or selvedge denim? Share your style with us.</p>
   <div class="icons">
-    <img src="https://cdn0.iconfinder.com/data/icons/Pinterest/128/Pinterest_Favicon.png" alt="">
     <img src="https://cdn4.iconfinder.com/data/icons/social-messaging-ui-color-shapes-2-free/128/social-facebook-circle-128.png" alt="">
+    <img src="https://cdn0.iconfinder.com/data/icons/Pinterest/128/Pinterest_Favicon.png" alt="">
     <img src="http://www.pcf.org/atf/cf/%7B7C77D6A2-5859-4D60-AF47-132FD0F85892%7D/twitter-round.png" alt="">
   </div>
 
@@ -142,12 +141,14 @@
         <img src="assets/style-guide@1.5x.jpg" alt="" >
           <p class="footer-p">There are eight-five ways to <a class="knot" href="#">knot a tie</a>. We'll show you <a class="knot" href="#">the essentials</a>.</p>
     </div>
+    </div>
   </footer>
 
   <div class="bottom--nav">
+    <div class="contained">
     <div class="shop">
-      <p><strong>Shop By</strong></p>
       <ul class="shop--li">
+        <p class="shop--head"><strong>Shop By</strong></p>
         <li>Collection</li>
         <li>Color</li>
         <li>Width</li>
@@ -157,8 +158,8 @@
     </div>
 
     <div class="about">
-      <p><strong>About Us</strong></p>
-      <ul class="about--us">
+      <ul class="about--li">
+        <p class="about--head"><strong>About Us</strong></p>
         <li>Our Story</li>
         <li>Where to Buy</li>
         <li>Wholesale</li>
@@ -167,8 +168,8 @@
     </div>
 
     <div class="style">
-      <p><strong>Style Guide</strong></p>
-      <ul class="style--guide">
+      <ul class="style--li">
+        <p class="style--head"><strong>Style Guide</strong></p>
         <li>How To Wear</li>
         <li>How To Tie</li>
         <li>Blog</li>
@@ -176,13 +177,22 @@
     </div>
 
     <div class="help">
-      <p><strong>Help</strong></p>
       <ul class="help--li">
+        <p class="help--head"><strong>Help</strong></p>
         <li>Contact Us</li>
         <li>Shipping Info</li>
         <li>Returns</li>
       </ul>
     </div>
+    </div>
+
+    <div class="right-box">
+      <h2 class="here"><em>We're here for you.</em></h2>
+      <p class="email">help@skinnyties.com</p>
+      <p class="pnum">877-687-8437</p>
+      <button class="cont-btn"type="button" name="button">Contact Us</button>
+    </div>
+      <h6>(c) All Rights Reserved.</h6>
   </div>
 </body>
 
