close enough for now

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <a class="login" href="">SIGN IN</a>
         <a class="login" href="">REGISTER</a>
       </div>
+
       <div class="bottom-right">
         <button class="cart">Cart</button>
         <input class="search-bar" name="Search" value="Search">
@@ -46,39 +47,57 @@
     <div class="container">
       <div class="tie-pics">
         <div class="tie">
+          <a class="tie-movement" href="https://66.media.tumblr.com/b90ea891f25f1ea3dce343a29eb90bca/tumblr_nzbz3ePWmO1uzae1ko1_500.gif">
           <img src="assets/black@1.5x.jpg" alt="">
+          </a>
           <p>Black</p>
         </div>
         <div class="tie">
+          <a class="tie-movement" href="https://66.media.tumblr.com/b90ea891f25f1ea3dce343a29eb90bca/tumblr_nzbz3ePWmO1uzae1ko1_500.gif">
           <img src="assets/blue@1.5x.jpg" alt="">
+          </a>
           <p>Blue</p>
         </div>
         <div class="tie">
+          <a class="tie-movement" href="https://66.media.tumblr.com/b90ea891f25f1ea3dce343a29eb90bca/tumblr_nzbz3ePWmO1uzae1ko1_500.gif">
           <img src="assets/collegiate@1.5x.jpg" alt="">
+          </a>
           <p>Collegiate</p>
         </div>
         <div class="tie">
+          <a class="tie-movement" href="https://66.media.tumblr.com/b90ea891f25f1ea3dce343a29eb90bca/tumblr_nzbz3ePWmO1uzae1ko1_500.gif">
           <img src="assets/cotton@1.5x.jpg" alt="">
+          </a>
           <p>Cotton</p>
         </div>
         <div class="tie">
+          <a class="tie-movement" href="https://66.media.tumblr.com/b90ea891f25f1ea3dce343a29eb90bca/tumblr_nzbz3ePWmO1uzae1ko1_500.gif">
           <img src="assets/favorites@1.5x.jpg" alt="">
+          </a>
           <p>Favorites</p>
         </div>
         <div class="tie">
+          <a class="tie-movement" href="https://66.media.tumblr.com/b90ea891f25f1ea3dce343a29eb90bca/tumblr_nzbz3ePWmO1uzae1ko1_500.gif">
           <img src="assets/graphic@1.5x.jpg" alt="">
+          </a>
           <p>Graphic</p>
         </div>
         <div class="tie">
+          <a class="tie-movement" href="https://66.media.tumblr.com/b90ea891f25f1ea3dce343a29eb90bca/tumblr_nzbz3ePWmO1uzae1ko1_500.gif">
           <img src="assets/plaid@1.5x.jpg" alt="">
+          </a>
           <p>Plaid</p>
         </div>
         <div class="tie">
+          <a class="tie-movement" href="https://66.media.tumblr.com/b90ea891f25f1ea3dce343a29eb90bca/tumblr_nzbz3ePWmO1uzae1ko1_500.gif">
           <img src="assets/silk@1.5x.jpg" alt="">
+          </a>
           <p>Silk</p>
         </div>
         <div class="tie">
+          <a class="tie-movement" href="https://66.media.tumblr.com/b90ea891f25f1ea3dce343a29eb90bca/tumblr_nzbz3ePWmO1uzae1ko1_500.gif">
           <img src="assets/striped@1.5x.jpg" alt="">
+          </a>
           <p>Striped</p>
         </div>
       </div>
@@ -184,16 +203,25 @@
         <li>Returns</li>
       </ul>
     </div>
-    </div>
+  </div>
+
 
     <div class="right-box">
-      <h2 class="here"><em>We're here for you.</em></h2>
-      <p class="email">help@skinnyties.com</p>
-      <p class="pnum">877-687-8437</p>
+      <div class="right-text">
+        <h2 class="here"><em>We're here for you.</em></h2>
+      </div>
+      <div class="contain-stuff">
+      <div class="email_num">
+        <p class="email">help@skinnyties.com</p>
+        <p class="pnum">877-687-8437</p>
+      </div>
+      <div class="btn">
       <button class="cont-btn"type="button" name="button">Contact Us</button>
     </div>
-      <h6>(c) All Rights Reserved.</h6>
   </div>
+  </div>
+  </div>
+  <h6 class="">(C) 2015 Skinny Ties. All rights reserved. Made by Gravity Department</h6>
 </body>
 
 </html>
