--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <li class="top-of-page">$30 off $150 order!</li>
     </ul>
   </header>
+
   <nav class="top">
     <img class="logo" src="assets/logo-stack@2x.png" alt="" height="150rem" />
     <ul class="tie-select">
@@ -35,9 +36,8 @@
       </div>
 
       <div class="bottom-right">
-        <button class="cart">Cart</button>
-        <input class="search-bar" name="Search" value="Search">
-        <span><i class="fa fa-search" aria-hidden="true"></i><span>
+        <button class="cart"><i class="fa fa-cart-plus" aria-hidden="true"></i> Cart  <i class="fa fa-square" aria-hidden="true"></i></button>
+        <button class="search-bar"type="button" name="button"><span><i class="fa fa-search" aria-hidden="true"></i><span> Search</button>
       </div>
     </div>
 
