finished until feedback

--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
   </div>
 
   <div class="story">
-    <h1><em>We started designing andselling neckties in 1971. <br/>After 44 years, we're still family-owned and operated.</em></h1>
-    <a class="story--link" href="https://i.imgflip.com/hqdk9.jpg">VIEW OUR STORY</a>
+    <h1><em>We started designing and selling neckties in 1971. <br/>After 44 years, we're still family-owned and operated.</em></h1>
+    <a class="story-link" href="https://i.imgflip.com/hqdk9.jpg">VIEW OUR STORY</a>
   </div>
 
   <footer>
@@ -141,11 +141,6 @@
     <img src="https://cdn0.iconfinder.com/data/icons/Pinterest/128/Pinterest_Favicon.png" alt="">
     <img src="http://www.pcf.org/atf/cf/%7B7C77D6A2-5859-4D60-AF47-132FD0F85892%7D/twitter-round.png" alt="">
   </div>
-
-        <!-- <i class="fa fa-facebook-official fa-2x" aria-hidden="true"></i>
-        <i class="fa fa-pinterest-p fa-2x" aria-hidden="true"></i>
-        <i class="fa fa-twitter fa-2x" aria-hidden="true"></i> -->
-
 
     </div>
     <div class="quarter">
@@ -221,7 +216,7 @@
   </div>
   </div>
   </div>
-  <h6 class="">(C) 2015 Skinny Ties. All rights reserved. Made by Gravity Department</h6>
+  <p class="rights">(C) 2015 Skinny Ties. All rights reserved. Made by Gravity Department</p>
 </body>
 
 </html>
