--- a/index.html
+++ b/index.html
@@ -10,16 +10,19 @@
 
 <body>
   <header>
-    <button class="free-shipping" type="button" name="button">FREE SHIPPING!</button>
+    <div class="container">
     <ul class="page-top">
+      <button class="free-shipping" type="button" name="button">FREE SHIPPING!</button>
       <li class="top-of-page">Plus Spring Savings</li>
       <li class="top-of-page">$10 off $50 order!</li>
       <li class="top-of-page">$20 off $100 order!</li>
       <li class="top-of-page">$30 off $150 order!</li>
     </ul>
+  </div>
   </header>
 
   <nav class="top">
+    <div class="container">
     <img class="logo" src="assets/logo-stack@2x.png" alt="" height="150rem" />
     <ul class="tie-select">
       <li class="nav-bar">Collection</li>
@@ -36,15 +39,16 @@
       </div>
 
       <div class="bottom-right">
-        <button class="cart"><i class="fa fa-cart-plus" aria-hidden="true"></i> Cart  <i class="fa fa-square" aria-hidden="true"></i></button>
-        <button class="search-bar"type="button" name="button"><span><i class="fa fa-search" aria-hidden="true"></i><span> Search</button>
+        <button class="cart"><i class="fa fa-cart-plus" aria-hidden="true"></i> Cart <i class="fa fa-square" aria-hidden="true"></i></button>
+        <button class="search-bar" type="button" name="button"><span><i class="fa fa-search" aria-hidden="true"></i><span> Search</button>
       </div>
     </div>
+  </div>
 
   </nav>
 
   <div class="ties">
-    <div class="container">
+    <div class="container-ties">
       <div class="tie-pics">
         <div class="tie">
           <a class="tie-movement" href="https://66.media.tumblr.com/b90ea891f25f1ea3dce343a29eb90bca/tumblr_nzbz3ePWmO1uzae1ko1_500.gif">
@@ -107,6 +111,7 @@
   </div>
 
   <div class="tiles">
+    <div class="container">
     <div class="bow-ties">
       <img src="assets/bow-ties@1.5x.jpg" alt="">
       <p class="tiles-p1">Bow Ties</p>
@@ -120,6 +125,7 @@
       <p class="tiles-p3">Tie Bars</p>
     </div>
   </div>
+  </div>
 
   <div class="story">
     <h1><em>We started designing and selling neckties in 1971. <br/>After 44 years, we're still family-owned and operated.</em></h1>
@@ -127,7 +133,7 @@
   </div>
 
   <footer>
-    <div class="footer-inner">
+    <div class="container">
     <div class="wkpick">
       <h3>Weekly Pick</h3>
         <img src="assets/new.jpg" alt="">
@@ -159,7 +165,7 @@
   </footer>
 
   <div class="bottom--nav">
-    <div class="contained">
+    <div class="container">
     <div class="shop">
       <ul class="shop--li">
         <p class="shop--head"><strong>Shop By</strong></p>
@@ -198,9 +204,6 @@
         <li>Returns</li>
       </ul>
     </div>
-  </div>
-
-
     <div class="right-box">
       <div class="right-text">
         <h2 class="here"><em>We're here for you.</em></h2>
@@ -214,6 +217,7 @@
       <button class="cont-btn"type="button" name="button">Contact Us</button>
     </div>
   </div>
+</div>
   </div>
   </div>
   <p class="rights">(C) 2015 Skinny Ties. All rights reserved. Made by Gravity Department</p>
