--- a/index.html
+++ b/index.html
@@ -12,35 +12,35 @@
   <header>
     <div class="container">
     <ul class="page-top">
-      <button class="free-shipping" type="button" name="button">FREE SHIPPING!</button>
-      <li class="top-of-page">Plus Spring Savings</li>
-      <li class="top-of-page">$10 off $50 order!</li>
-      <li class="top-of-page">$20 off $100 order!</li>
-      <li class="top-of-page">$30 off $150 order!</li>
-    </ul>
-  </div>
+        <button class="free-shipping" type="button" name="button">FREE SHIPPING!</button>
+        <li class="top-of-page">Plus Spring Savings</li>
+        <li class="top-of-page">$10 off $50 order!</li>
+        <li class="top-of-page">$20 off $100 order!</li>
+        <li class="top-of-page">$30 off $150 order!</li>
+  </ul>
+</div>
   </header>
 
   <nav class="top">
     <div class="container">
-    <img class="logo" src="assets/logo-stack@2x.png" alt="" height="150rem" />
-    <ul class="tie-select">
-      <li class="nav-bar">Collection</li>
-      <li class="nav-bar">Color</li>
-      <li class="nav-bar">Width</li>
-      <li class="nav-bar">Fabric</li>
-      <li class="nav-bar">Pattern</li>
-    </ul>
+      <ul class="tie-select">
+      <img class="logo" src="assets/logo-stack@2x.png" alt="" height="150rem" />
+        <li class="nav-bar">Collection</li>
+        <li class="nav-bar">Color</li>
+        <li class="nav-bar">Width</li>
+        <li class="nav-bar">Fabric</li>
+        <li class="nav-bar">Pattern</li>
+      </ul>
 
-    <div class="nav-right">
-      <div class="top-right">
-        <a class="login" href="">SIGN IN</a>
-        <a class="login" href="">REGISTER</a>
-      </div>
+      <div class="nav-right">
+        <div class="top-right">
+          <a class="login" href="">SIGN IN</a>
+          <a class="login" href="">REGISTER</a>
+        </div>
 
-      <div class="bottom-right">
-        <button class="cart"><i class="fa fa-cart-plus" aria-hidden="true"></i> Cart <i class="fa fa-square" aria-hidden="true"></i></button>
-        <button class="search-bar" type="button" name="button"><span><i class="fa fa-search" aria-hidden="true"></i><span> Search</button>
+        <div class="bottom-right">
+          <button class="cart"><i class="fa fa-cart-plus" aria-hidden="true"></i> Cart</i></button>
+          <button class="search-bar" type="button" name="button"><span><i class="fa fa-search" aria-hidden="true"></i><span> Search</button>
       </div>
     </div>
   </div>
@@ -165,7 +165,8 @@
   </footer>
 
   <div class="bottom--nav">
-    <div class="container">
+    <div class="btm-container">
+      <div class="directory">
     <div class="shop">
       <ul class="shop--li">
         <p class="shop--head"><strong>Shop By</strong></p>
@@ -204,6 +205,7 @@
         <li>Returns</li>
       </ul>
     </div>
+    </div>
     <div class="right-box">
       <div class="right-text">
         <h2 class="here"><em>We're here for you.</em></h2>
@@ -218,9 +220,13 @@
     </div>
   </div>
 </div>
+</div>
   </div>
+  <div class="copyright">
+    <div class="container">
+      <p class="rights">(C) 2015 Skinny Ties. All rights reserved. Made by Gravity Department</p>
+    </div>
   </div>
-  <p class="rights">(C) 2015 Skinny Ties. All rights reserved. Made by Gravity Department</p>
 </body>
 
 </html>
